# agogos

./: .pre-commit-config.yaml  CITATION.cff  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: main-branch-testing.yml  publish-package.yml  python-package-testing.yml  version-branch-testing.yml
agogos/: __init__.py  _core.py  parallel_training_system.py  parallel_transforming_system.py  pipeline.py  refiner.py  refining_system.py  trainer.py  training.py  training_system.py  transformer.py  transformer_system.py  transforming.py  transforming_system.py
agogos/_core/: _base.py  _block.py  _system.py  block.py  system.py
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
docs/source/_autosummary/: agogos.rst  agogos.training.rst
tests/: test__core.py  test_parallel_training_system.py  test_parallel_transforming_system.py  test_pipeline.py  test_refiner.py  test_refining_system.py  test_trainer.py  test_training.py  test_training_system.py  test_transformer.py  test_transforming.py  test_transforming_system.py
tests/_core/: test__base.py  test__block.py  test__system.py  test_block.py  test_system.py
