[project]
name = "agogos"
version = "0.2.2"
authors = [
    { name = "Jasper van Selm", email = "jmvanselm@gmail.com" },
]
description = "Package that creates the underlying construction of a machine learning pipeline"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies= [
    # hashing
    "joblib>=1.3.2"
]
