[project]
name = "agogos"
version = "0.4"
authors = [
    { name = "Jasper van Selm", email = "jmvanselm@gmail.com" },
    { name = "Jeffrey Lim", email = "jeffrey-lim@outlook.com" },
    { name = "Tolga Kopar", email = "cahittolgakopar@gmail.com" },
    { name = "Hugo de Heer", email = "hugodeheer1234@gmail.com"},
    { name = "Emiel Witting", email = "emiel.witting@gmail.com"},
]
description = "Agogos creates the underlying construction of a machine learning pipeline"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]
dependencies= [
    "joblib>=1.4.0",
    "annotated-types>=0.7.0",
]

[project.urls]
Homepage = "https://teamepoch.ai"
Documentation = "https://TeamEpochGithub.github.io/agogos"
Repository = "https://github.com/TeamEpochGithub/agogos"
Download = "https://pypi.org/project/agogos/#files"
Issues = "https://github.com/TeamEpochGithub/agogos/issues"
"Release notes" = "https://github.com/TeamEpochGithub/agogos/releases"

[tool.rye]
managed = true
lock-with-sources = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "sphinx>=7.2.6",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinxawesome-theme>=5.1.1",
    "myst-parser>=2.0.0",
    "pygit2>=1.14.1",
    "numpy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agogos"]

[tool.pydoclint]
style = "sphinx"
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
skip-checking-short-docstrings = false
check-return-types = false
show-filenames-in-every-violation-message = true
